// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component renders connect theme correctly 1`] = `
<span
  className="css-7l6bak"
  data-testid="text"
>
  Componente de texto
</span>
`;

exports[`Text Component renders correctly 1`] = `
<span
  className="css-jvt11d"
  data-testid="text"
>
  Componente de texto
</span>
`;
